# langrag

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  TODO.md  config.yaml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.sh  todo.md
.github/workflows/: tests.yml
docs/: index.md
docs/api/: batch.md  cache.md  chunkers.md  dataset.md  document.md  embedder-factory.md  embedder.md  evaluation-runner.md  evaluation.md  index-processors.md  index.md  parsers.md  search-result.md  service.md  vector-base.md  vector-duckdb.md  vector-seekdb.md  workflow.md
docs/guides/: concepts.md  document-processing.md  evaluation.md  installation.md  quickstart.md  retrieval.md
langrag/: pyproject.toml
langrag/src/langrag/: __init__.py
scripts/: download_model.sh  evaluate_demo.py
src/langrag/: __init__.py  api.py  engine.py  errors.py
src/langrag/agent/: DESIGN.md  __init__.py  executor.py  retrieval_tool.py  tool.py
src/langrag/batch/: DESIGN.md  __init__.py  config.py  processor.py  progress.py
src/langrag/cache/: DESIGN.md  __init__.py  base.py  semantic.py
src/langrag/chunker/: __init__.py  base.py  factory.py
src/langrag/compressor/: __init__.py  base.py  factory.py
src/langrag/config/: DESIGN.md  __init__.py  factory.py  models.py  settings.py
src/langrag/core/: __init__.py  chunk.py  document.py  query.py  search_result.py
src/langrag/datasource/: DESIGN.md  service.py
src/langrag/embedder/: __init__.py  factory.py
src/langrag/entities/: DESIGN.md  dataset.py  document.py  graph.py  search_result.py
src/langrag/evaluation/: DESIGN.md  __init__.py  base.py  runner.py  types.py
src/langrag/index_processor/: DESIGN.md
src/langrag/indexing/: __init__.py  pipeline.py
src/langrag/knowledge/: __init__.py  knowledge_base.py  manager.py
src/langrag/llm/: DESIGN.md  __init__.py  base.py  config.py  factory.py  stages.py
src/langrag/observability/: __init__.py  decorators.py  tracer.py
src/langrag/parser/: __init__.py  base.py  factory.py
src/langrag/pipeline/: __init__.py  base.py  chat.py  indexing.py  ingestion.py  retrieval.py
src/langrag/reranker/: __init__.py  base.py  factory.py
src/langrag/retrieval/: DESIGN.md  __init__.py  base.py  config.py  executor.py  factory.py  post_processor.py  retriever.py  workflow.py
src/langrag/utils/: __init__.py  async_helpers.py  performance.py  retry.py  rrf.py  similarity.py
src/langrag/vector_store/: __init__.py  base.py  capabilities.py  factory.py  manager.py
tests/: README.md  __init__.py  conftest.py  test_hybrid_search.py  test_integration.py  test_p0_fixes.py  test_qwen_integration.py  test_recursive_chunker.py
tests/e2e/: test_workflows.py
tests/fixtures/: common.py
tests/integration/: test_hybrid_search.py  test_rag_integration.py  test_web_injection.py  verify_duckdb.py  verify_seekdb.py
tests/smoke/: test_smoke.py
tests/unit/: test_config.py  test_post_processor.py  test_splitter.py
tests/unit/batch/: test_batch_processor.py
tests/unit/cache/: test_semantic_cache.py
tests/unit/chunker/: test_recursive_character.py
tests/unit/config/: test_config.py
tests/unit/core/: test_callbacks.py  test_errors.py  test_llm_resilience.py  test_models.py  test_rag_kernel_edge_cases.py  test_streaming.py
tests/unit/datasource/: test_chroma.py  test_duckdb.py  test_duckdb_fts.py  test_factory.py  test_service.py  test_sqlite_kv.py
tests/unit/embedder/: test_seekdb.py
tests/unit/entities/: test_document.py  test_entities_extra.py  test_query.py
tests/unit/evaluation/: test_metrics.py  test_runner.py  test_types.py
tests/unit/index_processor/: test_extractors.py  test_fixed_size_splitter.py  test_html_parser.py  test_page_index.py  test_paragraph_processor.py  test_parent_child.py  test_parent_child_v2.py  test_parser.py  test_qa.py  test_raptor.py
tests/unit/llm/: test_llm_config.py
tests/unit/observability/: test_decorators.py  test_tracer.py
tests/unit/retrieval/: test_agentic.py  test_compressor.py  test_graph_retriever.py  test_noop_reranker.py  test_rerank.py  test_rerank_flow.py  test_tree_agent.py  test_workflow.py
tests/unit/test_index_processor/: test_graph_processor.py
tests/unit/utils/: test_async_helpers.py  test_performance.py  test_retry.py  (+2 more)
tests/utils/: assertions.py  builders.py  in_memory_vector_store.py
web/: README.md  __init__.py  app.py  config.py  pyproject.toml  start.sh
web/core/: __init__.py  chat_service.py  context.py  database.py  document_processor.py  embedder_manager.py  embedders.py  kb_retrieval_config.py  llm_adapter.py  model_manager.py  rag_kernel.py  retrieval_service.py  vdb_manager.py
web/core/factories/: __init__.py  embedder_factory.py  llm_factory.py
web/core/services/: chat_service.py  document_processor.py  retrieval_service.py
web/data/: app.db
web/models/: __init__.py  database.py
web/routers/: __init__.py  chat.py  config.py  document.py  kb.py  playground.py  search.py
web/services/: __init__.py  document_service.py  embedder_service.py  evaluation_service.py  kb_service.py  llm_service.py  rag_chat_service.py
web/static/: index.html  script.js  style.css
web/static/css/: animations.css  base.css  components.css  layout.css  vars.css
web/static/css/components/: cards.css  chat.css  config.css  feedback.css  forms.css  playground.css  search.css  utils.css
web/static/js/: api.js  app.js  main.js  state.js  ui.js  utils.js
web/static/js/controllers/: chat.js  kb_detail.js  kb_list.js  models.js
web/static/js/core/: api.js  stores.js  utils.js
web/static/js/pages/: chat.js  kb-detail.js  kb-list.js  models.js  playground.js
web/templates/: index.html
web/templates/components/: sidebar.html
web/templates/pages/: chat.html  kb_detail.html  kb_list.html  models.html  playground.html
web/tests/: __init__.py  conftest.py  manual_test_web_rag.py  test_api.py  test_config_management.py  test_kb_advanced.py  test_playground.py  test_resources.py
web/tests/unit/: __init__.py
web/tests/unit/core/: __init__.py  test_model_manager.py
(+128 files in other folders)
