[project]
name = "langrag"
version = "0.2.0"
description = "A Modular, Production-Ready RAG Kernel for Building Intelligent Knowledge Systems"
readme = "README.md"
authors = [
    { name = "youhuanghe", email = "1051233107@qq.com" }
]
requires-python = ">=3.11"

# Core dependencies - minimal set for library usage
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
    "numpy>=1.26.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Document parsing
parsers = [
    "pypdf>=6.5.0",
    "python-docx>=1.2.0",
    "markdown>=3.10",
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "lxml>=6.0.2",
]

# Vector stores
vectorstores = [
    "duckdb>=1.0.0",
    "chromadb>=1.4.0",
    "pyseekdb>=1.0.0b6",
    "aiosqlite>=0.22.1",
]

# Web search providers
websearch = [
    "ddgs>=9.10.0",
    "httpx>=0.28.1",
]

# LLM providers
llm = [
    "openai>=2.14.0",
    "httpx>=0.28.1",
]

# Reranker
reranker = [
    "httpx>=0.28.1",
]

# ML features (RAPTOR clustering, etc.)
ml = [
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.7",
    "llvmlite>=0.43.0",
]

# Graph RAG support
graph = [
    "networkx>=3.2.0",
]

# Observability (OpenTelemetry)
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

# Local LLM support
local_llm = [
    "llama-cpp-python>=0.2.23",
]


# Standard installation (common features, no web)
standard = [
    "langrag[parsers,vectorstores,llm,reranker]",
]

# Full installation (all features except web)
full = [
    "langrag[parsers,vectorstores,websearch,llm,reranker,ml,observability,graph]",
]

# Complete installation (everything including local_llm)
all = [
    "langrag[full,local_llm]",
]

# Development dependencies
dev = [
    "langrag[standard]",  # Include standard components for testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Documentation
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Ruff 配置
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
# 忽略的规则
ignore = [
    "E501",  # 行长度由 formatter 处理
    "B008",  # 函数调用中的默认参数
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许 __init__.py 中未使用的导入
"tests/**/*.py" = ["ARG", "SIM"]  # 测试文件宽松要求
"tests/conftest.py" = ["F811"]  # 允许 conftest.py 中的 fixture 重复定义（为不同测试上下文）

# Mypy 配置
[tool.mypy]
python_version = "3.11"
warn_return_any = false  # 暂时关闭返回 Any 警告
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = false  # 暂时关闭严格 Optional 检查
warn_redundant_casts = false  # 关闭冗余转换警告
warn_unused_ignores = false  # 关闭未使用忽略警告
check_untyped_defs = false  # 暂时不检查未类型化的函数
no_implicit_optional = false  # 允许隐式 Optional

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
