[project]
name = "langrag-web"
version = "0.1.0"
description = "Web demo for LangRAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.30",
    "httpx>=0.28.1",
    "langrag[full]",
]

[tool.uv.sources]
langrag = { path = "../" }
